[package]
name = "letheo-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ANN index (HNSW) over archetype modes — the engine at scale, with Flat as the oracle."

[dependencies]
instant-distance = "0.6.1"
letheo-core = { path = "../letheo-core" }
